added a bunch of basic examples

--- a/examples/base.css
+++ b/examples/base.css
@@ -1,11 +1,28 @@
 body{
-  background-color: #fafafa;
+    background-color: #fafafa;
+    font-family: Arial, sans-serif;
 }
 
 #container{
-    width: 95%;
+    width: 90%;
     padding: 0 0 100px 0;
     margin: 30px auto;
+}
+
+#status{
+    position: fixed;
+    right: 5%;
+    top: 10px;
+    min-width: 60px;
+    border-radius: 5px;
+    background-color: #000;
+    color: #fff;
+    padding: 5px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .about{
@@ -13,15 +30,20 @@ body{
   margin: 0 auto;
   max-width: 700px;
   text-align: center;
-  font-family: Georgia, serif;
   font-size: 17px;
   line-height: 22px;
   color: #3D3D3D;
 }
 
+.about a{
+    color: #000;
+    font-weight: bold;
+    text-decoration: none;
+    font-style: italic;
+}
+
 .story{
     margin: 20px 0;
-    font-family: Arial, sans-serif;
     background-color: #f1f1f1;
 }
 
