--- a/examples/base.css
+++ b/examples/base.css
@@ -23,6 +23,17 @@ body{
     -ms-user-select: none;
     -o-user-select: none;
     user-select: none;
+    z-index: 11;
+}
+
+#trigger{
+    position: fixed;
+    width: 100%;
+    height: 1px;
+    top: 0px;
+    left: 0px;
+    background-color: #ff0000;
+    z-index: 10;
 }
 
 .about{
