wip: npm tasks for watching, serving and cleaning

--- a/documentation/css/base-examples.css
+++ b/documentation/css/base-examples.css
@@ -9,7 +9,6 @@ body {
 }
 
 
-
 .button,
 #status {
   display: inline;
@@ -18,11 +17,6 @@ body {
   padding: 5px;
   background-color: #000;
   color: #fff;
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
   user-select: none;
 }
 
@@ -38,7 +32,7 @@ body {
   right: 5%;
   top: 10px;
   z-index: 11;
-  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
 }
 
 .about {
@@ -68,17 +62,11 @@ body {
 .story.inviewport,
 .custom-selector.inviewport {
   background-color: #92BDCA;
-  -webkit-transition: background-color 500ms ease;
-  -moz-transition: background-color 500ms ease;
-  -o-transition: background-color 500ms ease;
   transition: background-color 500ms ease;
 }
 
 .story.active,
 .custom-selector.active {
   background-color: #1B6F00;
-  -webkit-transition: background-color 0 ease;
-  -moz-transition: background-color 0 ease;
-  -o-transition: background-color 0 ease;
   transition: background-color 0 ease;
 }
